--- a/Mapas/app/src/main/res/values/strings.xml
+++ b/Mapas/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Mapas</string>
+    <string name="app_name">App Source</string>
+    <string name="title_activity_ver_dados">Ver_dadosActivity</string>
 </resources>
